--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 
           <div class="form-group mb-2">
             <label for="batch">Batch:</label>
-            <input type="text" name="batch" class="form-control form-control-sm" maxlength="2">
-            <!-- <select id="batch" name="batch" placeholder="Ex: 1st" class="form-control form-control-sm" required>
+            <!-- <input type="text" name="batch" class="form-control form-control-sm" maxlength="2"> -->
+            <select id="batch" name="batch" placeholder="Ex: 1st" class="form-control form-control-sm" required>
               <option value="" disabled selected>Choose...</option>
 
               <optgroup label="Bi-Semester">
@@ -331,7 +331,7 @@
                 <option value="1st">1st</option>
               </optgroup>
 
-            </select> -->
+            </select>
 
           </div>
 
