--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale:1.0" />
   <title>Cover Page Generator | Feni University</title>
 
   <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
     .watermark::after {
       content: '';
       background: url(./image/fu.png) center center no-repeat;
-      opacity: 0.1;
+      opacity: 0.05;
       width: 300px;
       height: 300px;
       background-size: 300px 300px;
@@ -48,7 +48,7 @@
       border: 1px solid black;
     }
 
-    table thead{
+    table thead {
       background-color: bisque;
       color: black;
     }
@@ -90,18 +90,18 @@
       padding: 0 35px;
     }
 
-    .topic{
+    .topic {
       color: #f38120;
     }
   </style>
 </head>
 
-<body>
+<body class="container-fluid">
   <div class="row">
 
     <div class="bg-white col-12 col-lg-5">
       <form class="" id="pdf-form">
-        <div class="px-5 py-3 w-100">
+        <div class="px-2 px-lg-5 py-3 w-100">
 
           <div class="text-center d-flex justify-content-center">
             <div>
@@ -398,8 +398,8 @@
 
 
 
-    <div class="bg-white col-12 col-lg-6 bg-white pt-5">
-      <div id="coverPageDisplay" class="watermark d-flex justify-content-between flex-column ">
+    <div class="bg-white col-12 col-lg-7 bg-white pt-5 table-responsive">
+      <div id="coverPageDisplay" class="watermark d-flex justify-content-between flex-column mx-auto">
 
         <div class="text-center d-flex justify-content-center pt-5">
           <div>
