--- a/index.html
+++ b/index.html
@@ -524,6 +524,10 @@
           <h6 class="text-center" style=" font-weight:normal">Feni - 3900. Bangladesh</h6>
         </div> -->
       </div>
+
+      <div class="text-center pt-5">
+        <a href="https://info.flagcounter.com/wOrU"><img src="https://s11.flagcounter.com/mini/wOrU/bg_FFFFFF/txt_000000/border_FFE433/flags_0/" alt="Flag Counter" border="0"></a>
+      </div>
     </div>
   </div>
 
