--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
                 <option value="EEE">EEE</option>
                 <option value="Civil">Civil</option>
               </optgroup>
-              <optgroup label="Faculty of Science & Engineering">
+              <!-- <optgroup label="Faculty of Science & Engineering">
                 <option value="CSE">CSE</option>
                 <option value="EEE">EEE</option>
                 <option value="Civil">Civil</option>
@@ -198,7 +198,7 @@
                 <option value="CSE">CSE</option>
                 <option value="EEE">EEE</option>
                 <option value="Civil">Civil</option>
-              </optgroup>
+              </optgroup> -->
             </select>
           </div>
 
