--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
                 <option value="Library and Information Science">LIS</option>
               </optgroup>
               <optgroup label="Faculty of Business Administration">
-                <option value="Business Administration">BA</option>
+                <option value="Business Administration">BBA</option>
               </optgroup>
             </select>
           </div>
