--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
           </div>
 
           <div class="form-group mb-2">
-            <label id="labReportNoLabel" for="labReportNoLabel"><span class="coverPageType"></span> No:</label>
+            <label id="labReportNoLabel" for="labReportNoInput"><span class="coverPageType"></span> No:</label>
             <input type="number" step="1" min="1" id="labReportNoInput" name="labReportNo"
               class="form-control form-control-sm" required/>
           </div>
@@ -196,7 +196,7 @@
                 <option value="Library and Information Science">LIS</option>
               </optgroup>
               <optgroup label="Faculty of Business Administration">
-                <option value="Business Administration">BBA</option>
+                <option value="Business Administration">BA</option>
               </optgroup>
             </select>
           </div>
@@ -342,8 +342,9 @@
 
               <option value="" disabled selected>Choose...</option>
 
-              <option value="(UG)">UG</option>
-              <option value="(DH)">DH</option>
+              <option value="(UG)">Undergraduate</option>
+              <option value="(DH)">Diploma</option>
+              <option value="(PG)">Postgraduate</option>
             </select>
           </div>
 
@@ -351,16 +352,15 @@
             <label for="department">Your Department:</label>
             <select id="department" name="department" class="form-control form-control-sm" required>
               <option value="">Choose your department</option>
-              <optgroup label="Faculty of Science & Engineering">
-                <option value="Computer Science & Engineering">CSE</option>
-                <option value="Electrical And Electronics Engineering">EEE</option>
+              <optgroup label="Faculty of Science and Engineering">
+                <option value="Computer Science and Engineering">CSE</option>
+                <option value="Electrical and Electronics Engineering">EEE</option>
                 <option value="Civil Engineering">CE</option>
                 <option value="Mathematics">Math</option>
               </optgroup>
-              <optgroup label="Faculty of Arts, Law & Social Science">
+              <optgroup label="Faculty of Arts and Law">
                 <option value="English">English</option>
                 <option value="Law">Law</option>
-                <option value="Library and Information Science">LIS</option>
               </optgroup>
               <optgroup label="Faculty of Business Administration">
                 <option value="Business Administration">BA</option>
@@ -525,8 +525,7 @@
 
       <div class="text-center pt-5">
         <a href="https://info.flagcounter.com/wOrU"><img
-            src="https://s11.flagcounter.com/mini/wOrU/bg_FFFFFF/txt_000000/border_FFE433/flags_0/" alt="Flag Counter"
-            border="0"></a>
+            src="https://s11.flagcounter.com/mini/wOrU/bg_FFFFFF/txt_000000/border_FFE433/flags_0/" alt="Flag Counter"></a>
       </div>
     </div>
   </div>
